--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -5,7 +5,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 99;
+  z-index: 2;
   padding: 12px $gap;
   @media screen and (min-width: 576px) {
     padding: 16px $gap;
@@ -18,5 +18,72 @@
     color: $tertiaryColor;
     font-size: 18px;
     cursor: pointer;
+  }
+}
+
+.account-icon {
+  height: 100%;
+  width: 100%;
+  fill: #717171;
+}
+.burger-icon {
+  height: 16px;
+  width: 16px;
+  fill: #111;
+  stroke: #111;
+  stroke-width: 3;
+  overflow: visible;
+}
+.button-menu {
+  color: #717171;
+  flex: 0 0 30px;
+  height: 30px;
+  overflow: hidden;
+  position: relative;
+  width: 30px;
+  z-index: 1;
+  margin-left: 12px;
+  border-radius: 50%;  
+}
+.user {
+  position: relative;
+}
+.user-menu-container {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 5px 5px 12px;
+  background: transparent;
+  cursor: pointer;
+  margin: 0;
+  text-align: inherit;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  border-radius: 21px;
+  transition: box-shadow 0.2s cubic-bezier(0.2, 0, 0, 1);
+  &:hover {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+  }
+}
+
+.user-connect {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+  padding: 6px 22px;
+  z-index: 1;
+}
+
+.user-connect-list {
+  @include full_hw;
+  & div {
+    width: max-content;
+    margin: 0 auto;
+    padding: 0;
+    color: #717171;
   }
 }
