--- a/sass/04-components/modals/_modal.scss
+++ b/sass/04-components/modals/_modal.scss
@@ -16,14 +16,16 @@
     width: 50%;
     max-width: 50rem;
     position: relative;
+    z-index: 4;
   }
   &__overlay {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: 3;
     width: 100%;
     height: 100%;
-    background-color: rgba(#000, 0.5);
+    background-color: #222222;
+    opacity: .2;
   }
 }
