--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -19,6 +19,11 @@
     font-size: 18px;
     cursor: pointer;
   }
+  &__logo {
+    & svg path {
+      fill: #FF385C;
+    }
+  }
 }
 
 .account-icon {
