feat(866ak6j5z): navbar UI

--- a/sass/01-config/_variables.scss
+++ b/sass/01-config/_variables.scss
@@ -3,3 +3,5 @@ $backgroundColor: #faf7ee;
 $primaryColor: #C9ADA1;
 $secondaryColor: #A0A083;
 $tertiaryColor: #1c2829;
+
+$fontFamily: 'AirbnbCereal_W_Md';
