--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -19,11 +19,11 @@
     font-size: 18px;
     cursor: pointer;
   }
-  &__logo {
-    & svg path {
-      fill: #FF385C;
-    }
-  }
+  // &__logo {
+  //   & svg path {
+  //     fill: #ff385c;
+  //   }
+  // }
 }
 
 .account-icon {
@@ -48,7 +48,7 @@
   width: 30px;
   z-index: 1;
   margin-left: 12px;
-  border-radius: 50%;  
+  border-radius: 50%;
 }
 .user {
   position: relative;
@@ -73,22 +73,66 @@
 
 .user-connect {
   position: absolute;
-  top: 100%;
-  left: 0;
+  top: 130%;
+  right: 0;
   background-color: #ffffff;
   border: 1px solid #dddddd;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
-  padding: 6px 22px;
+  min-width: 140pw;
+  width: 30vw;
+  max-width: 200px;
   z-index: 1;
 }
 
 .user-connect-list {
   @include full_hw;
+  display: flex;
+  flex-direction: column;
   & li {
-    width: max-content;
-    margin: 0 auto;
-    padding: 0;
+    width: 100%;
     color: #717171;
+    padding: 12px 16px;
+    cursor: pointer;
+    &:hover {
+      background-color: #f5f5f5;
+    }
+    & a {
+      font-size: 16px;
+      font-family: $fontFamily;
+    }
   }
+}
+
+.button {
+  border-radius: 8px;
+  border-width: 1px;
+  border-style: solid;
+  transition: none 0s ease 0s;
+  border-color: #222222;
+  background: #ffffff;
+  padding: 13px 23px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  cursor: pointer;
+  & div:last-child {
+    flex: 1 1 0% !important;
+    font-size: 16px;
+  }
+  &__text {
+    padding-right: 20px;
+  }
+  &:hover {
+    background: #f5f5f5;
+  }
+}
+
+input {
+  width: 100%;
+  padding: 13px 23px;
+  border-radius: 8px; 
+
 }
