feat(866amh3k8): rent modal creation

--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -52,6 +52,10 @@
 }
 .user {
   position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 2.5vw;
 }
 .user-menu-container {
   display: inline-flex;
