--- a/sass/04-components/modals/_modal.scss
+++ b/sass/04-components/modals/_modal.scss
@@ -180,5 +180,46 @@
 form {
   display: flex;
   flex-direction: column;
-  row-gap: 4px;
+}
+
+.categories__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  max-height: 400px;
+  overflow-y: scroll;
+}
+.categories__item {
+  width: calc(50% - 6px);
+  border: solid 1px #e5e5e5;
+  border-radius: 8px;
+  padding: 8px 12px;
+  cursor: pointer;
+  &:hover {
+    background-color: #f5f5f5;
+  }
+  &--selected {
+    background-color: #047cd7;
+    color: #fff;
+    &:hover {
+      background-color: #047cd7;
+    }
+  }
+  &__text {
+    font-size: 12px;
+  }
+}
+.categories__title {
+  padding-bottom: 18px;
+  & h1 {
+    font-size: 18px;
+    color: #222222;
+    font-family: $fontFamily;
+    // padding-bottom: 6px;
+  }
+  & h4 {
+    font-size: 14px;
+    color: #b0b0b0;
+    font-family: $fontFamily;
+  }
 }
