--- a/sass/04-components/modals/_modal.scss
+++ b/sass/04-components/modals/_modal.scss
@@ -11,6 +11,10 @@
   @media screen and (min-width: 576px) {
     align-items: center;
   }
+  &__actions {
+    display: inline-flex;
+    column-gap: 18px;
+  }
   &__close {
     height: 16px;
     & button {
@@ -210,7 +214,7 @@ form {
   }
 }
 .categories__title {
-  padding-bottom: 18px;
+  // padding-bottom: 18px;
   & h1 {
     font-size: 18px;
     color: #222222;
@@ -222,4 +226,42 @@ form {
     color: #b0b0b0;
     font-family: $fontFamily;
   }
+}
+
+.leaflet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
+  z-index: 0 !important;
+}
+
+.map {
+  height: 35vh;
+  border-radius: 8px;
+}
+
+.location {
+  display: flex;
+  flex-direction: column;
+  row-gap: 22px;
+}
+
+.select__content {
+  display: inline-flex;
+  column-gap: 6px;
+  &__label {
+    font-size: 14px;
+    font-weight: 500;
+    color: #222222;
+    font-family: $fontFamily;
+  }
+  &__flag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.leaflet-bottom.leaflet-right {
+  display: none;
 }
