--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   z-index: 2;
   padding: 12px $gap;
+  background-color: #ffffff;
   @media screen and (min-width: 576px) {
     padding: 16px $gap;
   }
