--- a/sass/04-components/modals/_rent.scss
+++ b/sass/04-components/modals/_rent.scss
@@ -74,38 +74,55 @@
   }
 }
 picture {
-    --aspect_ratio_wrapper-ratio: 20 / 19;
-    aspect-ratio: var(--aspect_ratio_wrapper-ratio, unset);
+  background-color: #e5e7eb;
+  --aspect_ratio_wrapper-ratio: 20 / 19;
+  aspect-ratio: var(--aspect_ratio_wrapper-ratio, unset);
+}
+
+.picture__image {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  &--loading {
+    opacity: 1;
   }
-  
-  .picture__content {
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .picture__head {
-    & h3 {
-      font-size: 14px;
-      font-weight: 500;
-      color: #222222;
-      font-family: $fontFamily;
-    }
-  }
-  
-  .picture__category {
-    color: #b0b0b0;
-  }
-  
-  .picture__body,
-  .picture__category {
-    font-size: 12px;
+}
+
+.picture__content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.picture__head {
+  & h3 {
+    font-size: 14px;
     font-weight: 500;
+    color: #222222;
     font-family: $fontFamily;
   }
-  
-  .rent__button {
-    display: none;
-    @media screen and (min-width: 992px) {
-      display: block;
-    }
+}
+
+.picture__category {
+  color: #b0b0b0;
+}
+
+.picture__body,
+.picture__category {
+  font-size: 12px;
+  font-weight: 500;
+  font-family: $fontFamily;
+}
+
+.rent__button {
+  display: none;
+  @media screen and (min-width: 992px) {
+    display: block;
   }
+}
+
+.category__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+}
