--- a/sass/02-base/_base.scss
+++ b/sass/02-base/_base.scss
@@ -41,10 +41,10 @@ html {
   @media screen and (max-width: 768px) {
     font-size: 40%;
   }
-  @media screen and (max-width: 576px) {
-    font-size: 34%;
-  }
-  @media screen and (max-width: 321px) {
-    font-size: 28%;
-  }
+  // @media screen and (max-width: 576px) {
+  //   font-size: 34%;
+  // }
+  // @media screen and (max-width: 321px) {
+  //   font-size: 28%;
+  // }
 }
