feat(866anbq03): up

--- a/sass/01-config/_variables.scss
+++ b/sass/01-config/_variables.scss
@@ -1,7 +1,8 @@
 $gap: min(6.6vw, 62px);
 $backgroundColor: #faf7ee;
-$primaryColor: #C9ADA1;
-$secondaryColor: #A0A083;
-$tertiaryColor: #1c2829;
+$primary-color: #18a8f2;
+$secondary-color: #1e9de6;
+$tertiary-color: #1c8de3;
+$quaternary-color: #047cd7;
 
 $fontFamily: 'AirbnbCereal_W_Md';
