--- a/sass/02-base/_base.scss
+++ b/sass/02-base/_base.scss
@@ -48,3 +48,11 @@ html {
   //   font-size: 28%;
   // }
 }
+
+.rdrMonth {
+  width: 100% !important;
+}
+// .rdrCalendarWrapper {
+//   font-size: 16px !important;
+//   width: 100% !important;
+// }
