--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -14,17 +14,6 @@
   @media screen and (min-width: 992px) {
     padding: 20px $gap;
   }
-  & a,
-  button {
-    color: $tertiaryColor;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  // &__logo {
-  //   & svg path {
-  //     fill: #ff385c;
-  //   }
-  // }
 }
 
 .account-icon {
@@ -110,34 +99,81 @@
 }
 
 .button {
-  border-radius: 8px;
-  border-width: 1px;
-  border-style: solid;
-  transition: none 0s ease 0s;
-  border-color: #222222;
-  background: #ffffff;
-  padding: 13px 23px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+  position: relative;
+  border: none;
+  padding: 14px 24px;
+  font-size: 16px;
   cursor: pointer;
-  & div:last-child {
-    flex: 1 1 0% !important;
-    font-size: 16px;
+  transition: all 0.2s;
+  width: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+  &--primary {
+    color: #fff;
   }
-  &__text {
-    padding-right: 20px;
+  &--secondary {
+    border: solid 1px #e5e5e5;
+    color: #222222;
   }
   &:hover {
-    background: #f5f5f5;
+    .modal__submit__background__hover {
+      opacity: 1;
+    }
+  }
+  &__background {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    mask-image: -webkit-radial-gradient(white, black);
+    background: $primary-color;
+    background: linear-gradient(
+      to right,
+      $secondary-color 0%,
+      $tertiary-color 50%,
+      $quaternary-color 100%
+    );
+
+    &__hover {
+      display: block;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      background-position: calc((100 - var(--mouse-x, 0)) * 1%)
+        calc((100 - var(--mouse-y, 0)) * 1%);
+      background-size: 200% 200%;
+      transition: opacity 1.25s;
+      background-image: radial-gradient(
+        circle at center,
+        $secondary-color 0%,
+        $tertiary-color 27.5%,
+        $quaternary-color 40%,
+        $quaternary-color 57.5%,
+        $quaternary-color 75%,
+        $quaternary-color 100%
+      );
+    }
+  }
+
+  &__text {
+    font-size: 16px;
+    font-weight: 500;
+    position: relative;
   }
 }
 
 input {
   width: 100%;
   padding: 13px 23px;
-  border-radius: 8px; 
+  border-radius: 8px;
+}
 
+.menu__items {
+  cursor: pointer;
+  a {
+    color: #1c2829;
+  }
 }
