edit(866anbq03): changes

--- a/sass/04-components/landing/_landing.scss
+++ b/sass/04-components/landing/_landing.scss
@@ -1,11 +1,14 @@
 .landing,
 .listing__page {
   margin-top: 66px;
+  padding-bottom: 66px;
   @media screen and (min-width: 576px) {
     margin-top: 74px;
+    padding-bottom: 74px;
   }
   @media screen and (min-width: 992px) {
     margin-top: 82px;
+    padding-bottom: 82px;
   }
 }
 
