--- a/sass/04-components/listings/_page.scss
+++ b/sass/04-components/listings/_page.scss
@@ -41,6 +41,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    aspect-ratio: 16 / 11;
     @media screen and (min-width: 768px) {
       max-width: 600px;
     }
@@ -50,11 +51,40 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding-bottom: 22px;
+    padding-top: 18px;
     &__host {
       display: inline-flex;
       align-items: center;
       column-gap: 11px;
     }
   }
+}
+
+.listing__d {
+  display: flex;
+  flex-direction: column;
+  row-gap: 88px;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    column-gap: calc($gap / 2);
+    padding-top: 74px;
+  }
+}
+
+.rdrCalendarWrapper {
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
+}
+.calendar__container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.listing__i {
+  display: flex;
+  flex-direction: column;
+  row-gap: 18px;
 }
