--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -17,3 +17,5 @@
 @import './04-components/landing/landing';
 @import './04-components/listings/page';
 
+@import './04-components/checkout/page';
+
