--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   z-index: 2;
   padding: 12px $gap;
-  background-color: #ffffff;
+  background-color: #0F3A35;
   @media screen and (min-width: 576px) {
     padding: 16px $gap;
   }
@@ -174,6 +174,6 @@ input {
 .menu__items {
   cursor: pointer;
   a {
-    color: #1c2829;
+    color: #fff;
   }
 }
