--- a/sass/04-components/landing/_landing.scss
+++ b/sass/04-components/landing/_landing.scss
@@ -126,7 +126,7 @@
       fill: #00000080;
       transition: all 0.1s ease;
       &--favorited {
-        fill: #1e9de6;
+        fill: #2a9d8f;
       }
     }
   }
