--- a/sass/02-base/_base.scss
+++ b/sass/02-base/_base.scss
@@ -52,7 +52,6 @@ html {
 .rdrMonth {
   width: 100% !important;
 }
-// .rdrCalendarWrapper {
-//   font-size: 16px !important;
-//   width: 100% !important;
-// }
+.rdrCalendarWrapper {
+  width: 100% !important;
+}
