--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -7,12 +7,38 @@
   justify-content: space-between;
   z-index: 2;
   padding: 12px $gap;
-  background-color: #0F3A35;
+  background-color: #fff;
   @media screen and (min-width: 576px) {
     padding: 16px $gap;
   }
   @media screen and (min-width: 992px) {
     padding: 20px $gap;
+  }
+  &--scrolled {
+    .header__background {
+      opacity: 0;
+    }
+  }
+  &__background {
+    position: absolute;
+    inset: 0 0 auto 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0f3a35;
+    z-index: -1;
+    transition: opacity 0.2s ease;
+  }
+  &__logo {
+    & g {
+      transition: opacity 0.5s ease;
+      opacity: 0;
+      &.header__logo--black {
+        opacity: 1;
+      }
+      &.header__logo--white {
+        opacity: 1;
+      }
+    }
   }
 }
 
@@ -85,7 +111,7 @@
   flex-direction: column;
   & li {
     width: 100%;
-    color: #717171;
+    color: #222222;
     padding: 12px 16px;
     cursor: pointer;
     &:hover {
@@ -136,6 +162,12 @@
       $tertiary-color 50%,
       $quaternary-color 100%
     );
+    background: linear-gradient(
+      to right,
+      #13d8c0 0%,
+      #2ab3a2 50%,
+      #2a9d8f 100%
+    );
 
     &__hover {
       display: block;
@@ -146,14 +178,23 @@
         calc((100 - var(--mouse-y, 0)) * 1%);
       background-size: 200% 200%;
       transition: opacity 1.25s;
+      // background-image: radial-gradient(
+      //   circle at center,
+      //   $secondary-color 0%,
+      //   $tertiary-color 27.5%,
+      //   $quaternary-color 40%,
+      //   $quaternary-color 57.5%,
+      //   $quaternary-color 75%,
+      //   $quaternary-color 100%
+      // );
       background-image: radial-gradient(
         circle at center,
-        $secondary-color 0%,
-        $tertiary-color 27.5%,
-        $quaternary-color 40%,
-        $quaternary-color 57.5%,
-        $quaternary-color 75%,
-        $quaternary-color 100%
+        #13d8c0 0%,
+        #2ab3a2 27.5%,
+        #2a9d8f 40%,
+        #2a9d8f 57.5%,
+        #2a9d8f 75%,
+        #2a9d8f 100%
       );
     }
   }
@@ -173,7 +214,7 @@ input {
 
 .menu__items {
   cursor: pointer;
-  a {
-    color: #fff;
-  }
+  // a {
+  //   color: #fff;
+  // }
 }
