--- a/sass/04-components/modals/_modal.scss
+++ b/sass/04-components/modals/_modal.scss
@@ -224,10 +224,10 @@ form {
     background-color: #f5f5f5;
   }
   &--selected {
-    background-color: #047cd7;
+    background-color: #2A9D8F;
     color: #fff;
     &:hover {
-      background-color: #047cd7;
+      background-color: #2A9D8F;
     }
   }
   &__text {
