--- a/sass/03-globals/_header.scss
+++ b/sass/03-globals/_header.scss
@@ -114,6 +114,7 @@
     color: #222222;
     padding: 12px 16px;
     cursor: pointer;
+    border-radius: 10px;
     &:hover {
       background-color: #f5f5f5;
     }
