--- a/sass/04-components/landing/_landing.scss
+++ b/sass/04-components/landing/_landing.scss
@@ -13,7 +13,7 @@
 }
 
 .landing {
-  &__listing {
+  &__list {
     padding: 188px $gap;
     --breakpoint-grid_columns: 1;
     --breakpoint-grid_column-gap: 24px;
@@ -174,6 +174,13 @@
   position: relative;
   background: #0f3a35;
   color: #fff;
+  padding-top: 66px;
+  @media screen and (min-width: 576px) {
+    padding-top: 74px;
+  }
+  @media screen and (min-width: 992px) {
+    padding-top: 82px;
+  }
   &__content {
     display: inline-flex;
     align-items: flex-start;
@@ -240,33 +247,57 @@
     }
   }
   &__image {
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: linear-gradient(
+        180deg,
+        rgba(15, 58, 53, 0.8) 0%,
+        rgba(15, 58, 53, 0) 100%
+      );
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+    }
+    &:hover {
+      &::before {
+        opacity: 1;
+      }
+    }
     & img {
       @include full_hw;
       object-fit: cover;
     }
-    &--0 img {
-      border-radius: 50px 50px 0px 50px;
+    &--0 {
+      & img {
+        border-radius: 50px 50px 0px 50px;
+      }
     }
-    &--1 img {
-      border-radius: 50px 50px 50px 0px;
+    &--1 {
+      & img {
+        border-radius: 50px 50px 50px 0px;
+      }
     }
     &--2 {
-      grid-area: 2 / 1 / 3 / 2;
       & img {
         border-radius: 50px 0px;
       }
+      grid-area: 2 / 1 / 3 / 2;
     }
     &--3 {
-      grid-area: 2 / 2 / 3 / 3;
       & img {
         border-radius: 0px 0px 50px 50px;
       }
+      grid-area: 2 / 2 / 3 / 3;
     }
     &--4 {
-      grid-area: 2 / 3 / 3 / 4;
       & img {
         border-radius: 0px 50px;
       }
+      grid-area: 2 / 3 / 3 / 4;
     }
   }
   &__cta {
